<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarDisplay">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000">

        <ImageView
            android:id="@+id/imgDivider"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:contentDescription="@string/divider"
            android:src="#1D424246"
            app:layout_constraintBottom_toTopOf="@+id/txtEventName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:scaleX="1.1"
            android:scaleY="1.1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginLeft="176dp"
            android:layout_marginEnd="176dp"
            android:layout_marginRight="176dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/event"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarView"
            app:layout_constraintVertical_bias="0.028" />

        <TextView
            android:id="@+id/txtStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="36dp"
            android:text="@string/date"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEventName" />

        <EditText
            android:id="@+id/editStart"
            android:layout_width="126dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:enabled="false"
            android:foregroundGravity="center"
            android:gravity="center"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtStartDate"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editEnd"
            android:layout_width="126dp"
            android:layout_height="44dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:enabled="false"
            android:foregroundGravity="center"
            android:gravity="center"
            android:inputType="time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTime"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="68dp"
            android:layout_marginRight="68dp"
            android:text="@string/time"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEventName" />

        <TextView
            android:id="@+id/txtCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="20dp"
            android:text="@string/categoryDisplay"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editStart" />

        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="16dp"
            android:autoSizeTextType="uniform"
            android:text="@string/descriptionDisplay"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editCategory" />

        <TextView
            android:id="@+id/editDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="8dp"
            android:text="@string/notAvailable"
            app:autoSizeTextType="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDesc" />

        <TextView
            android:id="@+id/editCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:text="@string/notAvailable"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCategory" />

        <Button
            android:id="@+id/btnAdd"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="53dp"
            android:layout_marginRight="53dp"
            android:background="@drawable/round_button"
            android:text="@string/addNew"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEnd" />

        <Spinner
            android:id="@+id/spinnerEvents"
            android:layout_width="200dp"
            android:layout_height="32dp"
            android:layout_marginStart="105dp"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="106dp"
            android:layout_marginRight="106dp"
            android:layout_marginBottom="19dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/editStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEventName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>